--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,10 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title><%= page %></title>
 </head>
 <body>
-hola
+<div><%= page %></div>
+<button type=button class="btn btn-cec">Hola</button>
 </body>
 </html>
