--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Inicio</title>
-<link href="styles.css?18a0e8a8ced5a8283b07" rel="stylesheet"></head>
+<link href="styles.css?8107eafca85528656f32" rel="stylesheet"></head>
 <body>
 <div>Inicio</div>
-<button type="button" class="btn btn-cec">Hola</button>
-<script type="text/javascript" src="app.js?18a0e8a8ced5a8283b07"></script></body>
+<button type="button" class="btn btn-cec">Hola mundo</button>
+<script type="text/javascript" src="app.js?8107eafca85528656f32"></script></body>
 </html>
