--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <div><%= page %></div>
-<button type=button class="btn btn-cec">Hola</button>
+<button type=button class="btn btn-cec">Hola mundo</button>
 </body>
 </html>
